# 3am-statusline

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  install.sh  shim.js
.cargo/: config.toml
.claude/: .gitignore  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: doc-writer.md  release-manager.md  rust-code-reviewer.md
.claude/rules/: agents.md  doc-writer.md  documentation.md  interview-style.md  markdown.md  memory.md  mermaid.md  plugins.md  questions.md  release.md  rules.md  rust.md  skills.md  team.md  usage-stats.md
.github/workflows/: release.yml
config/: statusline.yml
docs/: configuration.md  events.md  marketplace-schema.md
scripts/: git_status.py  status.py  time.py
skills/release/: SKILL.md
skills/setup/: SKILL.md
skills/theme/: SKILL.md
src/: budget.rs  config.rs  events.rs  format.rs  main.rs  meter.rs  payload.rs  ratelimit.rs  template.rs
src/event/: git.rs  mod.rs  status.rs  sys.rs  time.rs  version.rs  weather.rs
