[package]
name = "three-am-statusline"
version = "0.0.0"
edition = "2021"
description = "Configurable status display for Claude Code sessions"
authors = ["Brian Claridge"]
license = "MIT"
repository = "https://github.com/brianclaridge/3am-statusline"

[[bin]]
name = "3am-statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.33"
ureq = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
